--- a/web/sites/mobile-nextbet/config/sync/core.entity_form_display.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.default.yml
+++ b/web/sites/mobile-nextbet/config/sync/core.entity_form_display.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.default.yml
@@ -10,6 +10,7 @@ dependencies:
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_banner_link_target
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_content_position
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_currency
+    - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_external_game_id
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_game_lobby
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_game_platform
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_games_subprovider
@@ -117,6 +118,7 @@ third_party_settings:
     group_game_fields:
       children:
         - field_slider_game_code
+        - field_external_game_id
         - field_game_platform
         - field_slider_game_provider
         - field_games_subprovider
@@ -300,6 +302,14 @@ content:
     third_party_settings: {  }
     type: string_textarea
     region: content
+  field_external_game_id:
+    weight: 11
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
   field_game_launching:
     weight: 3
     settings: {  }
@@ -307,20 +317,20 @@ content:
     type: options_select
     region: content
   field_game_lobby:
-    weight: 16
+    weight: 17
     settings:
       display_label: true
     third_party_settings: {  }
     type: boolean_checkbox
     region: content
   field_game_platform:
-    weight: 11
+    weight: 12
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   field_games_subprovider:
-    weight: 13
+    weight: 14
     settings: {  }
     third_party_settings: {  }
     type: options_select
@@ -535,7 +545,7 @@ content:
     type: text_textfield
     region: content
   field_slider_enable_game_launch:
-    weight: 14
+    weight: 15
     settings:
       display_label: true
     third_party_settings: {  }
@@ -550,13 +560,13 @@ content:
     type: string_textfield
     region: content
   field_slider_game_provider:
-    weight: 12
+    weight: 13
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   field_slider_use_game_loader:
-    weight: 15
+    weight: 16
     settings:
       display_label: true
     third_party_settings: {  }
