--- a/web/sites/jamboree-casino/config/sync/core.entity_form_display.paragraph.metatag.default.yml
+++ b/web/sites/jamboree-casino/config/sync/core.entity_form_display.paragraph.metatag.default.yml
@@ -5,6 +5,8 @@ dependencies:
   config:
     - field.field.paragraph.metatag.field_attribute_value
     - field.field.paragraph.metatag.field_meta_name
+    - field.field.paragraph.metatag.field_select_name
+    - field.field.paragraph.metatag.field_use_dropdown
     - paragraphs.paragraphs_type.metatag
 _core:
   default_config_hash: hmkcC_b2Mhj9XECRH0YjLNyq7MfJtY-Ug74A4hwD4ds
@@ -14,7 +16,7 @@ bundle: metatag
 mode: default
 content:
   field_attribute_value:
-    weight: 1
+    weight: 3
     settings:
       size: 60
       placeholder: ''
@@ -29,9 +31,24 @@ content:
     third_party_settings: {  }
     type: string_textfield
     region: content
-  translation:
-    weight: 10
+  field_select_name:
+    weight: 2
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
     region: content
+  field_use_dropdown:
+    weight: 1
+    settings:
+      display_label: true
+    third_party_settings: {  }
+    type: boolean_checkbox
+    region: content
+  translation:
+    weight: 4
+    region: content
+    settings: {  }
+    third_party_settings: {  }
 hidden:
   created: true
   status: true
