--- a/web/sites/777baby-casino/config/sync/core.extension.yml
+++ b/web/sites/777baby-casino/config/sync/core.extension.yml
@@ -87,6 +87,8 @@ module:
   token: 0
   toolbar: 0
   user: 0
+  views_bulk_edit: 0
+  views_bulk_operations: 0
   views_data_export: 0
   views_ui: 0
   webcomposer_affilates: 0
