--- a/web/sites/zipang-casino/config/sync/views.view.game_list_v3.yml
+++ b/web/sites/zipang-casino/config/sync/views.view.game_list_v3.yml
@@ -370,6 +370,71 @@ display:
           separator: ', '
           field_api_classes: false
           plugin_id: field
+        field_enable_game_mobile:
+          id: field_enable_game_mobile
+          table: zipang_desktop_games_entity__field_enable_game_mobile
+          field: field_enable_game_mobile
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: 'Enable Game Mobile'
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: true
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: boolean
+          settings:
+            format: unicode-yes-no
+            format_custom_true: mobile
+            format_custom_false: 'false'
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          plugin_id: field
         field_game_title:
           id: field_game_title
           table: zipang_desktop_games_entity__field_game_title
@@ -801,71 +866,6 @@ display:
           destination: false
           entity_type: zipang_desktop_games_entity
           plugin_id: entity_operations
-        field_enable_game_mobile:
-          id: field_enable_game_mobile
-          table: zipang_desktop_games_entity__field_enable_game_mobile
-          field: field_enable_game_mobile
-          relationship: none
-          group_type: group
-          admin_label: ''
-          label: 'Enable Game Mobile'
-          exclude: false
-          alter:
-            alter_text: false
-            text: ''
-            make_link: false
-            path: ''
-            absolute: false
-            external: false
-            replace_spaces: false
-            path_case: none
-            trim_whitespace: false
-            alt: ''
-            rel: ''
-            link_class: ''
-            prefix: ''
-            suffix: ''
-            target: ''
-            nl2br: false
-            max_length: 0
-            word_boundary: true
-            ellipsis: true
-            more_link: false
-            more_link_text: ''
-            more_link_path: ''
-            strip_tags: false
-            trim: false
-            preserve_tags: ''
-            html: false
-          element_type: ''
-          element_class: ''
-          element_label_type: ''
-          element_label_class: ''
-          element_label_colon: true
-          element_wrapper_type: ''
-          element_wrapper_class: ''
-          element_default_classes: true
-          empty: ''
-          hide_empty: false
-          empty_zero: false
-          hide_alter_empty: true
-          click_sort_column: value
-          type: boolean
-          settings:
-            format: default
-            format_custom_true: ''
-            format_custom_false: ''
-          group_column: value
-          group_columns: {  }
-          group_rows: true
-          delta_limit: 0
-          delta_offset: 0
-          delta_reversed: false
-          delta_first_last: false
-          multi_type: separator
-          separator: ', '
-          field_api_classes: false
-          plugin_id: field
       defaults:
         fields: false
         filters: false
@@ -1687,7 +1687,7 @@ display:
           type: boolean
           settings:
             format: custom
-            format_custom_true: 'true'
+            format_custom_true: desktop
             format_custom_false: 'false'
           group_column: value
           group_columns: {  }
@@ -3123,7 +3123,7 @@ display:
           type: boolean
           settings:
             format: custom
-            format_custom_true: 'true'
+            format_custom_true: mobile
             format_custom_false: 'false'
           group_column: value
           group_columns: {  }
