--- a/web/sites/jamboree-casino/config/sync/views.view.game_list_v3_trimmed.yml
+++ b/web/sites/jamboree-casino/config/sync/views.view.game_list_v3_trimmed.yml
@@ -3,6 +3,8 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.storage.jamboree_desktop_games_entity.field_arcade_game_category
+    - field.storage.jamboree_desktop_games_entity.field_arcade_game_filter
     - field.storage.jamboree_desktop_games_entity.field_client_type
     - field.storage.jamboree_desktop_games_entity.field_client_type_mobile
     - field.storage.jamboree_desktop_games_entity.field_enable_free_play
@@ -1327,20 +1329,17 @@ display:
         type: data_field
         options:
           field_options:
-            id:
-              alias: ''
-              raw_output: false
             field_game_title:
               alias: game_title
               raw_output: false
-            field_enable_game:
-              alias: enable_game
+            id:
+              alias: ''
               raw_output: false
             field_enable_game_mobile:
               alias: enable_game_mobile
               raw_output: false
-            field_game_code:
-              alias: game_code
+            field_enable_game:
+              alias: enable_game
               raw_output: false
             field_game_tag_export:
               alias: game_tag
@@ -1369,35 +1368,23 @@ display:
             field_game_filter_games_export:
               alias: games_filter_id
               raw_output: false
-            field_game_thumbnail_export:
-              alias: image
-              raw_output: false
-            field_all_games_category_export:
-              alias: all_games_categories
+            field_arcade_game_filter_export:
+              alias: arcade_game_filter
               raw_output: false
             field_arcade_game_category_export:
               alias: arcade_game_category
               raw_output: false
-            field_arcade_game_filter_export:
-              alias: arcade_game_filter
+            field_game_thumbnail_export:
+              alias: image
               raw_output: false
             field_game_type_export:
               alias: game_type
-              raw_output: false
-            field_game_category_export:
-              alias: casino_categories
               raw_output: false
             field_game_provider_export_1:
               alias: provider
               raw_output: false
             field_game_tag_export_1:
               alias: game_tag_object
-              raw_output: false
-            field_game_title_icon_export:
-              alias: game_title_icon
-              raw_output: false
-            field_game_icon_label_export:
-              alias: game_icon_label
               raw_output: false
             field_provider_product_export:
               alias: provider_product
@@ -1512,6 +1499,69 @@ display:
           plugin_id: standard
       rendering_language: '***LANGUAGE_entity_translation***'
       fields:
+        field_game_title:
+          id: field_game_title
+          table: jamboree_desktop_games_entity__field_game_title
+          field: field_game_title
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: string
+          settings:
+            link_to_entity: false
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          plugin_id: field
         id:
           id: id
           table: jamboree_desktop_games_entity_field_data
@@ -1575,69 +1625,6 @@ display:
           field_api_classes: false
           entity_type: jamboree_desktop_games_entity
           entity_field: id
-          plugin_id: field
-        field_game_title:
-          id: field_game_title
-          table: jamboree_desktop_games_entity__field_game_title
-          field: field_game_title
-          relationship: none
-          group_type: group
-          admin_label: ''
-          label: ''
-          exclude: false
-          alter:
-            alter_text: false
-            text: ''
-            make_link: false
-            path: ''
-            absolute: false
-            external: false
-            replace_spaces: false
-            path_case: none
-            trim_whitespace: false
-            alt: ''
-            rel: ''
-            link_class: ''
-            prefix: ''
-            suffix: ''
-            target: ''
-            nl2br: false
-            max_length: 0
-            word_boundary: true
-            ellipsis: true
-            more_link: false
-            more_link_text: ''
-            more_link_path: ''
-            strip_tags: false
-            trim: false
-            preserve_tags: ''
-            html: false
-          element_type: ''
-          element_class: ''
-          element_label_type: ''
-          element_label_class: ''
-          element_label_colon: false
-          element_wrapper_type: ''
-          element_wrapper_class: ''
-          element_default_classes: true
-          empty: ''
-          hide_empty: false
-          empty_zero: false
-          hide_alter_empty: true
-          click_sort_column: value
-          type: string
-          settings:
-            link_to_entity: false
-          group_column: value
-          group_columns: {  }
-          group_rows: true
-          delta_limit: 0
-          delta_offset: 0
-          delta_reversed: false
-          delta_first_last: false
-          multi_type: separator
-          separator: ', '
-          field_api_classes: false
           plugin_id: field
         field_enable_game_mobile:
           id: field_enable_game_mobile
@@ -2316,6 +2303,126 @@ display:
           delta_first_last: 0
           field_api_classes: 0
           plugin_id: field_export
+        field_arcade_game_filter_export:
+          id: field_arcade_game_filter_export
+          table: jamboree_desktop_games_entity__field_arcade_game_filter
+          field: field_arcade_game_filter_export
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: target_id
+          type: entity_reference_entity_id
+          settings: {  }
+          group_column: target_id
+          group_columns: {  }
+          group_rows: 1
+          delta_limit: '0'
+          delta_offset: '0'
+          delta_reversed: 0
+          delta_first_last: 0
+          field_api_classes: 0
+          plugin_id: field_export
+        field_arcade_game_category_export:
+          id: field_arcade_game_category_export
+          table: jamboree_desktop_games_entity__field_arcade_game_category
+          field: field_arcade_game_category_export
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: target_id
+          type: entity_reference_entity_id
+          settings: {  }
+          group_column: target_id
+          group_columns: {  }
+          group_rows: 1
+          delta_limit: '0'
+          delta_offset: '0'
+          delta_reversed: 0
+          delta_first_last: 0
+          field_api_classes: 0
+          plugin_id: field_export
         field_game_thumbnail_export:
           id: field_game_thumbnail_export
           table: jamboree_desktop_games_entity__field_game_thumbnail
@@ -2440,10 +2547,10 @@ display:
           delta_first_last: false
           field_api_classes: 0
           plugin_id: field_export
-        field_game_category_export:
-          id: field_game_category_export
-          table: jamboree_desktop_games_entity__field_game_category
-          field: field_game_category_export
+        field_game_provider_export_1:
+          id: field_game_provider_export_1
+          table: jamboree_desktop_games_entity__field_game_provider
+          field: field_game_provider_export
           relationship: none
           group_type: group
           admin_label: ''
@@ -2489,21 +2596,28 @@ display:
           empty_zero: false
           hide_alter_empty: true
           click_sort_column: target_id
-          type: entity_reference_entity_id
-          settings: {  }
+          type: entity_reference_export
+          settings:
+            view_mode: default
+            extra:
+              id: id
+              title: 0
+              url: 0
+              type: 0
+              bundle: 0
           group_column: target_id
           group_columns: {  }
-          group_rows: 1
-          delta_limit: '0'
-          delta_offset: '0'
-          delta_reversed: 0
-          delta_first_last: 0
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
           field_api_classes: 0
           plugin_id: field_export
-        field_game_provider_export_1:
-          id: field_game_provider_export_1
-          table: jamboree_desktop_games_entity__field_game_provider
-          field: field_game_provider_export
+        field_game_tag_export_1:
+          id: field_game_tag_export_1
+          table: jamboree_desktop_games_entity__field_game_tag
+          field: field_game_tag_export
           relationship: none
           group_type: group
           admin_label: ''
@@ -2643,13 +2757,14 @@ display:
         - request_format
         - url.query_args
       tags:
+        - 'config:field.storage.jamboree_desktop_games_entity.field_arcade_game_category'
+        - 'config:field.storage.jamboree_desktop_games_entity.field_arcade_game_filter'
         - 'config:field.storage.jamboree_desktop_games_entity.field_client_type'
         - 'config:field.storage.jamboree_desktop_games_entity.field_client_type_mobile'
         - 'config:field.storage.jamboree_desktop_games_entity.field_enable_free_play'
         - 'config:field.storage.jamboree_desktop_games_entity.field_enable_game'
         - 'config:field.storage.jamboree_desktop_games_entity.field_enable_game_mobile'
         - 'config:field.storage.jamboree_desktop_games_entity.field_external_game_id'
-        - 'config:field.storage.jamboree_desktop_games_entity.field_game_category'
         - 'config:field.storage.jamboree_desktop_games_entity.field_game_code_icore'
         - 'config:field.storage.jamboree_desktop_games_entity.field_game_filter'
         - 'config:field.storage.jamboree_desktop_games_entity.field_game_filter_games'
